Config Flyway migrations & add system-data